@@ -15,7 +15,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.dgawlik.util.Utility.extractString;
 
@@ -57,7 +56,7 @@ public class PersonApiController
                 .findAllProjectedBy(LimitedCaseView.class)
                 .stream()
                 .filter(v -> caseIds.contains(v.getId()))
-                .collect(Collectors.toList());
+                .toList();
 
         var actions = approvalRulesService.canInitiate(me.getRole());
 
